--- a/_config.yml
+++ b/_config.yml
@@ -17,26 +17,21 @@ title: Queryinterface to know more
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Software Architect, Failed entreprenuer 
+author:             Arun
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: ar_kumar
+github_username:  arkum
+
+google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
 
 # Build settings
 markdown: kramdown
-
+theme : jekyll-theme-clean-blog
 remote_theme: arkum/startbootstrap-clean-blog-jekyll
+paginate:           5
+paginate_path:      "/posts/page:num/"
 plugins:
   - jekyll-feed
-
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+  - jekyll-paginate
+  - jekyll-sitemap ## Uncomment this line to silently generate a sitemaps.org compliant sitemap for your Jekyll site
