--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Queryinterface to know more
-email: your-email@example.com
+title: iunknownme.com
+email: ar.kumar@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Software Architect, Failed entreprenuer 
 author:             Arun
