--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Software Architect, Failed entreprenuer 
 author:             Arun
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://iuknownme.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://iunknownme.com/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ar_kumar
 github_username:  arkum
 
