--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: iunknownme.com
+title: Arun Kumar
 email: ar.kumar@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Software Architect, Failed entreprenuer 
 author:             Arun
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "https://iunknownme.com/" # the subpath of your site, e.g. /blog
 url: "https://iunknownme.com/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ar_kumar
 github_username:  arkum
