--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: ar.kumar@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Software Architect, Failed entreprenuer 
 author:             Arun
-baseurl: "https://iunknownme.com/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://iunknownme.com/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ar_kumar
 github_username:  arkum
