--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Arun Kumar
 email: ar.kumar@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Software Architect, Failed entreprenuer 
+  Software Architect, mere mortal 
 author:             Arun
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://iunknownme.com/" # the base hostname & protocol for your site, e.g. http://example.com
